--- a/Projekat/WebP/WebContent/home.html
+++ b/Projekat/WebP/WebContent/home.html
@@ -1,10 +1,133 @@
 <!DOCTYPE html>
 <html>
 <head>
-<meta charset="ISO-8859-1">
-<title>Home</title>
+	<link rel="stylesheet" type="text/css" href="stil.css">
+	<link rel="stylesheet" type="text/css" href="home.css">
+	<link href="https://fonts.googleapis.com/css?family=Montserrat" rel="stylesheet">
+	<link href="https://fonts.googleapis.com/icon?family=Material+Icons" rel="stylesheet">
+	<script src="js/jquery-2.1.0.min.js"></script>
+	<script src="js/script.js"></script>
+	<script src="js/home.js"></script>
+	<title>Home</title>
 </head>
 <body>
-
+	<header>
+		<div id="header">
+			<a href="#"><i class="material-icons" id="menubtn">menu</i></a>
+			<a href="home.html"><img src="images/logoo.png" id="logo"></a>
+			<div id="sign"><a href="register.html" id="register">Register</a><span>/</span><a href="login.html" id="signin">Sign in</a></div>
+			<a href="#"><img src="images/profile.png" id="profilbtn"></a>
+			<div class="searchbar">
+				<input type="search" placeholder='Search...' class='srchinput'></input>
+				<a href="search.html"><i class="material-icons" id="searchbtn">search</i></a>
+			</div>
+		</div>
+	</header>
+	<nav>
+		<ul>
+			<li><a href=#><b>Music</b></a></li>
+			<li><a href=#><b>Comedy</b></a></li>
+			<li><a href=#><b>Gaming</b></a></li>
+			<li><a href=#><b>Movies</b></a></li>
+			<li><a href=#><b>Sport</b></a></li>
+			<li><a href=#><b>News</b></a></li>
+		</ul>
+	</nav>
+	<div id="slika">
+		<div class="container">
+			<div id="top">
+				<b>Top 5 kanala</b><br>
+			</div>
+			<div id="sadrzaj" style="width: 100%;background:white;padding: 20px 0;">
+				<div class="recommended">
+				<p><b>Recommended</b></p>
+				<div id="videoHome">
+					<div class="thumbnailWrapper">
+						<a href="video.html"><img src="images/thumbnail.jpg" id="thumbnail"></a>
+					</div>
+					<a href="video.html" id="naslov">Video sa youtube-a</a>
+					<a href="profile.html" id="user">pero</a>
+					<span id="views">1000 views</span>
+					<span id="date">06.02.2018.</span>
+				</div>
+				<div id="videoHome">
+					<div class="thumbnailWrapper">
+						<a href="local.html"><img src="images/thumbnail.jpg" id="thumbnail"></a>
+					</div>
+					<a href="local.html" id="naslov">Video sa kompa</a>
+					<a href="profile.html" id="user">pero</a>
+					<span id="views">1000 views</span>
+					<span id="date">06.02.2018.</span>
+				</div>
+				<div id="videoHome">
+					<div class="thumbnailWrapper">
+						<a href="video.html"><img src="images/thumbnail.jpg" id="thumbnail"></a>
+					</div>
+					<a href="video.html" id="naslov">Lorem ipsum dolor sit amet, consectetur adipiscing elit</a>
+					<a href="profile.html" id="user">unknown</a>
+					<span id="views">1000 views</span>
+					<span id="date">06.02.2018.</span>
+				</div>
+				<div id="videoHome">
+					<div class="thumbnailWrapper">
+						<a href="video.html"><img src="images/thumbnail.jpg" id="thumbnail"></a>
+					</div>
+					<a href="video.html" id="naslov">Lorem ipsum dolor sit amet, consectetur adipiscing elit</a>
+					<a href="profile.html" id="user">pero</a>
+					<span id="views">1000 views</span>
+					<span id="date">06.02.2018.</span>
+				</div>
+				<div id="videoHome">
+					<div class="thumbnailWrapper">
+						<a href="video.html"><img src="images/thumbnail.jpg" id="thumbnail"></a>
+					</div>
+					<a href="video.html" id="naslov">Lorem ipsum dolor sit amet, consectetur adipiscing elit</a>
+					<a href="profile.html" id="user">pero</a>
+					<span id="views">1000 views</span>
+					<span id="date">06.02.2018.</span>
+				</div>
+				<div id="videoHome">
+					<div class="thumbnailWrapper">
+						<a href="video.html"><img src="images/thumbnail.jpg" id="thumbnail"></a>
+					</div>
+					<a href="video.html" id="naslov">Lorem ipsum dolor sit amet, consectetur adipiscing elit</a>
+					<a href="profile.html" id="user">pero</a>
+					<span id="views">1000 views</span>
+					<span id="date">06.02.2018.</span>
+				</div>
+				<div id="videoHome">
+					<div class="thumbnailWrapper">
+						<a href="video.html"><img src="images/thumbnail.jpg" id="thumbnail"></a>
+					</div>
+					<a href="video.html" id="naslov">Lorem ipsum dolor sit amet, consectetur adipiscing elit</a>
+					<a href="profile.html" id="user">pero</a>
+					<span id="views">1000 views</span>
+					<span id="date">06.02.2018.</span>
+				</div>
+				<div id="videoHome">
+					<div class="thumbnailWrapper">
+						<a href="video.html"><img src="images/thumbnail.jpg" id="thumbnail"></a>
+					</div>
+					<a href="video.html" id="naslov">Lorem ipsum dolor sit amet, consectetur adipiscing elit</a>
+					<a href="profile.html" id="user">pero</a>
+					<span id="views">1000 views</span>
+					<span id="date">06.02.2018.</span>
+				</div>
+			</div>
+			<div id="pagination">
+  					<a href="#pagination" class="active">1</a>
+  					<a href="#pagination">2</a>
+  					<a href="#pagination">3</a>
+  					<a href="#pagination">4</a>
+  					<a href="#pagination">5</a>
+  					<a href="#pagination">6</a>
+			</div>
+			</div>
+			
+		</div>
+	</div>
+	<footer>
+		<p>Created by Anja Terzic</p>
+	</footer>
 </body>
 </html>
