--- a/Projekat/WebP/WebContent/admin.html
+++ b/Projekat/WebP/WebContent/admin.html
@@ -1,8 +1,8 @@
 <!DOCTYPE html>
 <html>
 <head>
-	<link rel="stylesheet" type="text/css" href="stil.css">
-	<link rel="stylesheet" type="text/css" href="admin.css">
+	<link rel="stylesheet" type="text/css" href="css/stil.css">
+	<link rel="stylesheet" type="text/css" href="css/admin.css">
 	<link href="https://fonts.googleapis.com/icon?family=Material+Icons" rel="stylesheet">
 	<link href="https://fonts.googleapis.com/css?family=Montserrat" rel="stylesheet">
 	<!--<link rel="stylesheet" type="text/css" href="login.css">-->
