--- a/Projekat/WebP/WebContent/register.html
+++ b/Projekat/WebP/WebContent/register.html
@@ -37,19 +37,23 @@
 	<div id="slika">
 		<div class="container">
 			<div style="height: 88vh">
-			<form method="GET" id="loginForm" onsubmit="return validateForm()">
-				<div>Sign in</div>
-				<table id="loginTable">
-                    <tr>
-                        <td style="padding: 10px;">Username:</td>
-                        <td><input type="text" id="unos" name="username" autocomplete="off"></td>
+			<form method="GET" id="registerForm">
+				<div>Registracija</div>
+				<table id="registerTable">
+					<tr>
+                        <td>E-mail:</td>
+                        <td><input type="text" id="unos" name="email" autocomplete="off"></td>
                     </tr>
                     <tr>
-                        <td style="padding: 10px;">Password:</td>
-                        <td><input type="password" id="unos" name="password" autocomplete="off"></td>
+                        <td>Username:</td>
+                        <td><input type="text" id="unos" name="usname" autocomplete="off"></td>
                     </tr>
                     <tr>
-                        <td colspan="2"><button type="submit" id="loginbtn">Sign in</button></td>
+                        <td>Password:</td>
+                        <td><input type="password" id="unos" name="psw" autocomplete="off"></td>
+                    </tr>
+                    <tr>
+                        <td colspan="2"><button type="submit" id="registerbtn">Register</button></td>
                     </tr>
                 </table>
 			</form></div>
