--- a/Projekat/WebP/WebContent/profile.html
+++ b/Projekat/WebP/WebContent/profile.html
@@ -8,6 +8,7 @@
 	<!--<link rel="stylesheet" type="text/css" href="login.css">-->
 	<script src="js/jquery-2.1.0.min.js"></script>
 	<script src="js/script.js"></script>
+	<script src="js/user.js"></script>
 	<script src="js/login.js"></script>
 	<title>Profil</title>
 </head>
