--- a/Projekat/WebP/WebContent/profile.html
+++ b/Projekat/WebP/WebContent/profile.html
@@ -1,6 +1,7 @@
 <!DOCTYPE html>
 <html>
 <head>
+	<meta charset="UTF-8">
 	<link rel="stylesheet" type="text/css" href="css/stil.css">
 	<link rel="stylesheet" type="text/css" href="css/profile.css">
 	<link href="https://fonts.googleapis.com/icon?family=Material+Icons" rel="stylesheet">
@@ -41,6 +42,8 @@
 				<div id="podaci">
 					<span id="korisnik">username</span><br>
 					<button id="followbtn">Follow</button>
+					<button id="blockbtn">Block</button>
+					<button id="deletebtn">Delete</button>
 					<p id="profileDate">06.02.2018.</p>
 					<span id="brFollowers">1000 followers</span><br>
 					<div id="opisKanala">
@@ -49,7 +52,7 @@
 				</div>
 				<div style="width: 100%;background:white;padding: 20px 0;">
 					<div class="recommended">
-						<div id="videoHome">
+						<!-- <div id="videoHome">
 							<div class="thumbnailWrapper">
 								<a href="video.html"><img src="images/thumbnail.jpg" id="thumbnail"></a>
 							</div>
@@ -129,7 +132,7 @@
 	  					<a href="#pagination">4</a>
 	  					<a href="#pagination">5</a>
 	  					<a href="#pagination">6</a>
-					</div>
+					</div> -->
 				</div>
 				<div style="width: 88%; margin: auto;">Following</div>
 				<div id="following">
