--- a/Projekat/WebP/WebContent/search.html
+++ b/Projekat/WebP/WebContent/search.html
@@ -1,6 +1,7 @@
 <!DOCTYPE html>
 <html>
 <head>
+	<meta charset="UTF-8">
 	<link rel="stylesheet" type="text/css" href="css/stil.css">
 	<link rel="stylesheet" type="text/css" href="css/search.css">
 	<link href="https://fonts.googleapis.com/icon?family=Material+Icons" rel="stylesheet">
@@ -8,6 +9,7 @@
 	<!--<link rel="stylesheet" type="text/css" href="login.css">-->
 	<script src="js/jquery-2.1.0.min.js"></script>
 	<script src="js/script.js"></script>
+	<script src="js/search.js"></script>
 	<!--<script src="js/login.js"></script>-->
 	<title>Search</title>
 </head>
