--- a/Projekat/WebP/WebContent/video.html
+++ b/Projekat/WebP/WebContent/video.html
@@ -55,6 +55,8 @@
 				<button id="stop">Stop</button>
 				<button id="pause">Pause</button>
 				<button id="play">Play</button>
+				<button id="addVideo">Add video</button>
+				<button id="editVideo">Edit video</button>
 			</div>
 			<div id="recommended">
 				<p><b>Recommended</b></p>
@@ -116,6 +118,10 @@
 			</div>
 			</span>
 			<div class="comments">
+				<div class="addComment">
+					<textarea id="addContent" maxlength="100"></textarea>
+					<input type="submit" value="Post" id="postComment">
+				</div>
 
 				<form id="komPoStr">
 					Komentara po strani: 
