--- a/Projekat/WebP/WebContent/register.html
+++ b/Projekat/WebP/WebContent/register.html
@@ -43,7 +43,15 @@
 				<div>Registracija</div>
 				<table id="registerTable">
 					<tr>
-                        <td>E-mail:</td>
+                        <td>Name:</td>
+                        <td><input type="text" class="unos" id="nameInput" name="name" autocomplete="off"></td>
+                    </tr>
+                    <tr>
+                        <td>Lastname:</td>
+                        <td><input type="text" class="unos" id="lastnameInput" name="lastname" autocomplete="off"></td>
+                    </tr>
+                    <tr>
+                        <td>Email:</td>
                         <td><input type="text" class="unos" id="emailInput" name="email" autocomplete="off"></td>
                     </tr>
                     <tr>
@@ -53,6 +61,10 @@
                     <tr>
                         <td>Password:</td>
                         <td><input type="password" class="unos" id="passInput" name="psw" autocomplete="off"></td>
+                    </tr>
+					<tr>
+                        <td>Description:</td>
+                        <td><input type="text" class="unos" id="descriptionInput" name="description" autocomplete="off"></td>
                     </tr>
                     <tr>
                         <td colspan="2"><button type="submit" id="registerbtn">Register</button></td>
