--- a/Projekat/WebP/WebContent/home.html
+++ b/Projekat/WebP/WebContent/home.html
@@ -20,9 +20,17 @@
 				href="home.html"><img src="images/logoo.png" id="logo"></a>
 			<div id="sign"></div>
 			<a href="#"><img src="images/profile.png" id="profilbtn"></a>
+			<div id="search">
+				<span>Search videos by: </span><br>
+				<input type="checkbox" id="cbTitle" name="title" value="title">Title
+				<input type="checkbox" id="cbUser" name="user" value="user" checked>User
+				<input type="checkbox" id="cbComment" name="comment" value="comment" checked>Comment
+				<input type="submit" value="Search" id="searchbtn">
+			</div>
+			
 			<div class="searchbar">
 				<input type="search" placeholder='Search...' class='srchinput'></input>
-				<a href="search.html"><i class="material-icons" id="searchbtn">search</i></a>
+				<a href="#"><i class="material-icons" id="searchbtn">search</i></a>
 			</div>
 		</div>
 	</header>
@@ -43,20 +51,18 @@
 			</div>
 			<div id="sadrzaj"
 				style="width: 100%; background: white; padding: 20px 0;">
-				
-					<div class="dropdown">
-						<button onclick="myFunction()" id="sort" class="dropbtn">Sort</button>
-						<div id="myDropdown" class="dropdown-content">
-							<a href="#sort" id="mostPopular">Most popular</a> 
-							<a href="#sort" id="leastPopular">Least popular</a> 
-							<a href="#sort" id="newest">Newest</a>
-							<a href="#sort" id="oldest">Oldest</a>
-							<a href="#sort" id="alphabetic">A-Z</a>
-							<a href="#sort" id="alphabeticReverse">Z-A</a>
-							<a href="#sort" id="alphabeticAuthor">A-Z author</a>
-							<a href="#sort" id="alphabeticAuthorReverse">Z-A author</a>
-						</div>
+
+				<div class="dropdown">
+					<button onclick="myFunction()" id="sort" class="dropbtn">Sort</button>
+					<div id="myDropdown" class="dropdown-content">
+						<a href="#sort" id="mostPopular">Most popular</a> <a href="#sort"
+							id="leastPopular">Least popular</a> <a href="#sort" id="newest">Newest</a>
+						<a href="#sort" id="oldest">Oldest</a> <a href="#sort"
+							id="alphabetic">A-Z</a> <a href="#sort" id="alphabeticReverse">Z-A</a>
+						<a href="#sort" id="alphabeticAuthor">A-Z author</a> <a
+							href="#sort" id="alphabeticAuthorReverse">Z-A author</a>
 					</div>
+				</div>
 				<div class="recommended">
 					<p>
 						<b>Recommended</b>
@@ -75,22 +81,23 @@
 		<p>Created by Anja Terzic</p>
 	</footer>
 	<script type="text/javascript">
-	function myFunction() {
-	    document.getElementById("myDropdown").classList.toggle("show");
-	}
-	
-	window.onclick = function(event) {
-		  if (!event.target.matches('.dropbtn')) {
+		function myFunction() {
+			document.getElementById("myDropdown").classList.toggle("show");
+		}
 
-		    var dropdowns = document.getElementsByClassName("dropdown-content");
-		    var i;
-		    for (i = 0; i < dropdowns.length; i++) {
-		      var openDropdown = dropdowns[i];
-		      if (openDropdown.classList.contains('show')) {
-		        openDropdown.classList.remove('show');
-		      }
-		    }
-		  }
+		window.onclick = function(event) {
+			if (!event.target.matches('.dropbtn')) {
+
+				var dropdowns = document
+						.getElementsByClassName("dropdown-content");
+				var i;
+				for (i = 0; i < dropdowns.length; i++) {
+					var openDropdown = dropdowns[i];
+					if (openDropdown.classList.contains('show')) {
+						openDropdown.classList.remove('show');
+					}
+				}
+			}
 		}
 	</script>
 </body>
