--- a/Projekat/WebP/WebContent/video.html
+++ b/Projekat/WebP/WebContent/video.html
@@ -57,6 +57,7 @@
 				<button id="play">Play</button>
 				<button id="addVideo">Add video</button>
 				<button id="editVideo">Edit video</button>
+				<button id="deleteVideo">Delete video</button>
 			</div>
 			<div id="recommended">
 				<p><b>Recommended</b></p>
