--- a/Projekat/WebP/WebContent/register.html
+++ b/Projekat/WebP/WebContent/register.html
@@ -40,7 +40,7 @@
 		<div class="container">
 			<div style="height: 88vh">
 			<form action="RegistrationServlet" method="POST" id="registerForm">
-				<div>Registracija</div>
+				<div id="doing">Registracija</div>
 				<table id="registerTable">
 					<tr>
                         <td>Name:</td>
@@ -66,7 +66,7 @@
                         <td>Description:</td>
                         <td><input type="text" class="unos" id="descriptionInput" name="description" autocomplete="off"></td>
                     </tr>
-                    <tr>
+                    <tr id="reg">
                         <td colspan="2"><button type="submit" id="registerbtn">Register</button></td>
                     </tr>
                 </table>
