--- a/Projekat/WebP/WebContent/home.html
+++ b/Projekat/WebP/WebContent/home.html
@@ -1,17 +1,16 @@
 <!DOCTYPE html>
 <html>
 <head>
-<link rel="stylesheet" type="text/css" href="css/stil.css">
-<link rel="stylesheet" type="text/css" href="css/home.css">
-<link href="https://fonts.googleapis.com/css?family=Montserrat"
-	rel="stylesheet">
-<link href="https://fonts.googleapis.com/icon?family=Material+Icons"
-	rel="stylesheet">
-<script src="js/jquery-2.1.0.min.js"></script>
-<script src="js/script.js"></script>
-<script src="js/home.js"></script>
-<script src="js/login.js"></script>
-<title>Home</title>
+	<meta charset="UTF-8">
+	<link rel="stylesheet" type="text/css" href="css/stil.css">
+	<link rel="stylesheet" type="text/css" href="css/home.css">
+	<link href="https://fonts.googleapis.com/css?family=Montserrat" rel="stylesheet">
+	<link href="https://fonts.googleapis.com/icon?family=Material+Icons" rel="stylesheet">
+	<script src="js/jquery-2.1.0.min.js"></script>
+	<script src="js/script.js"></script>
+	<script src="js/home.js"></script>
+	<script src="js/login.js"></script>
+	<title>Home</title>
 </head>
 <body>
 	<header>
@@ -21,13 +20,14 @@
 			<div id="sign"></div>
 			<a href="#"><img src="images/profile.png" id="profilbtn"></a>
 			<div id="search">
-				<span>Search videos by: </span><br>
-				<input type="checkbox" id="cbTitle" name="title" value="title">Title
-				<input type="checkbox" id="cbUser" name="user" value="user" checked>User
-				<input type="checkbox" id="cbComment" name="comment" value="comment" checked>Comment
-				<input type="submit" value="Search" id="searchbtn">
+				<span>Search videos by: </span><br> <input type="checkbox"
+					id="cbTitle" name="title" value="title">Title <input
+					type="checkbox" id="cbUser" name="user" value="user" checked>User
+				<input type="checkbox" id="cbComment" name="comment" value="comment"
+					checked>Comment <input type="submit" value="Search"
+					id="searchbtn">
 			</div>
-			
+
 			<div class="searchbar">
 				<input type="search" placeholder='Search...' class='srchinput'></input>
 				<a href="#"><i class="material-icons" id="searchbtn">search</i></a>
