--- a/Projekat/WebP/WebContent/profile.html
+++ b/Projekat/WebP/WebContent/profile.html
@@ -44,6 +44,7 @@
 					<button id="followbtn">Follow</button>
 					<button id="blockbtn">Block</button>
 					<button id="deletebtn">Delete</button>
+					<button id="editbtn">Edit</button>
 					<p id="profileDate">06.02.2018.</p>
 					<span id="brFollowers">1000 followers</span><br>
 					<div id="opisKanala">
@@ -145,36 +146,6 @@
 				</div>
 				<div style="width: 88%; margin: auto;">Following</div>
 				<div id="following">
-					<div id="osoba">
-						<div id="korisnickoIme">pero</div>
-						<div id="foloveri">1000 followers</div>
-						<button id="zafoluj">Follow</button>
-					</div>
-					<div id="osoba">
-						<div id="korisnickoIme">pero</div>
-						<div id="foloveri">1000 followers</div>
-						<button id="zafoluj">Follow</button>
-					</div>
-					<div id="osoba">
-						<div id="korisnickoIme">pero</div>
-						<div id="foloveri">1000 followers</div>
-						<button id="zafoluj">Follow</button>
-					</div>
-					<div id="osoba">
-						<div id="korisnickoIme">pero</div>
-						<div id="foloveri">1000 followers</div>
-						<button id="zafoluj">Follow</button>
-					</div>
-					<div id="osoba">
-						<div id="korisnickoIme">pero</div>
-						<div id="foloveri">1000 followers</div>
-						<button id="zafoluj">Follow</button>
-					</div>
-					<div id="osoba">
-						<div id="korisnickoIme">pero</div>
-						<div id="foloveri">1000 followers</div>
-						<button id="zafoluj">Follow</button>
-					</div>
 				</div>
 			</div>
 		</div>
