--- a/Projekat/WebP/WebContent/register.html
+++ b/Projekat/WebP/WebContent/register.html
@@ -17,7 +17,7 @@
 		<div id="header">
 			<a href="#"><i class="material-icons" id="menubtn">menu</i></a>
 			<a href="home.html"><img src="images/logoo.png" id="logo"></a>
-			<div id="sign"><a href="register.html" id="register">Register</a><span>/</span><a href="login.html" id="signin">Sign in</a></div>
+			<div id="sign"></div>
 			<!--<a href="login.html" id="sign" id="register">Register</a><span id="sign">/</span><a href="login.html" id="signin" id="sign">Sign in</a>-->
 			<a href="#"><img src="images/profile.png" id="profilbtn"></a>
 			<div class="searchbar">
