--- a/Projekat/WebP/WebContent/search.html
+++ b/Projekat/WebP/WebContent/search.html
@@ -10,6 +10,7 @@
 	<script src="js/jquery-2.1.0.min.js"></script>
 	<script src="js/script.js"></script>
 	<script src="js/search.js"></script>
+	<script src="js/login.js"></script>
 	<!--<script src="js/login.js"></script>-->
 	<title>Search</title>
 </head>
@@ -18,7 +19,7 @@
 		<div id="header">
 			<a href="#"><i class="material-icons" id="menubtn">menu</i></a>
 			<a href="home.html"><img src="images/logoo.png" id="logo"></a>
-			<div id="sign"><a href="register.html" id="register">Register</a><span>/</span><a href="login.html" id="signin">Sign in</a></div>
+			<div id="sign"></div>
 			<a href="#"><img src="images/profile.png" id="profilbtn"></a>
 			<div class="searchbar">
 				<input type="search" placeholder='Search...' class='srchinput'></input>
