--- a/Projekat/WebP/WebContent/video.html
+++ b/Projekat/WebP/WebContent/video.html
@@ -10,7 +10,6 @@
 	<script src="https://www.youtube.com/iframe_api"></script>
 	<script src="js/script.js"></script>
 	<script src="js/video.js"></script>
-
 	<title>Video</title>
 </head>
 <body>
@@ -52,15 +51,15 @@
 				<span id="brojLajkova">34</span><a href="#" id="like"><i class="material-icons">thumb_up</i></a>
 				<a href="#" id="dislike"><i class="material-icons">thumb_down</i></a><span id="brojDislajkova">12</span>
 				<p id="opisVidea">Also, every time you leave a comment, a kitten happily purrs itself to sleep.  Let us know what you like, or even love, in the comments below.  We want to hear from you! Let us know what you like, or even love, in the comments below. We want to hear every time you leave a comment, a kitten happily purrs itself to sleep.</p>
-				<button id="stop">Stop</button>
+				<!-- <button id="stop">Stop</button>
 				<button id="pause">Pause</button>
-				<button id="play">Play</button>
+				<button id="play">Play</button> -->
 				<button id="addVideo">Add video</button>
 				<button id="editVideo">Edit video</button>
 				<button id="deleteVideo">Delete video</button>
 			</div>
 			<div id="recommended">
-				<p><b>Recommended</b></p>
+				<!-- <p><b>Recommended</b></p>
 				<div id="videoHome">
 					<div id="zaThumb">
 						<div class="thumbnailWrapper">
@@ -115,7 +114,7 @@
 					<a href="profile.html" id="userRecomm">pero</a>
 					<span id="viewsRecomm">1000 views</span>
 					<span id="dateRecomm">06.02.2018.</span>
-				</div>
+				</div> -->
 			</div>
 			</span>
 			<div class="comments">
