--- a/Projekat/WebP/WebContent/add.html
+++ b/Projekat/WebP/WebContent/add.html
@@ -17,7 +17,7 @@
 		<div id="header">
 			<a href="#"><i class="material-icons" id="menubtn">menu</i></a>
 			<a href="home.html"><img src="images/logoo.png" id="logo"></a>
-			<div id="sign"><a href="register.html" id="register">Register</a><span>/</span><a href="login.html" id="signin">Sign in</a></div>
+			<div id="sign"></div>
 			<!--<a href="login.html" id="sign" id="register">Register</a><span id="sign">/</span><a href="login.html" id="signin" id="sign">Sign in</a>-->
 			<a href="#"><img src="images/profile.png" id="profilbtn"></a>
 			<div class="searchbar">
@@ -39,12 +39,16 @@
 	<div id="slika">
 		<div class="container">
 			<div style="height: 88vh">
-			<!--  <form id="videoForm">-->
+			<!-- <form id="loginForm"> -->
 				<div>Video:</div>
 				<table id="videoTable">
 					<tr>
                         <td>videoURL</td>
                         <td><input type="text" class="unos" id="urlInput" name="url" autocomplete="off"></td>
+                    </tr>
+                    <tr>
+                        <td>Thumbnail</td>
+                        <td><input type="text" class="unos" id="imgInput" name="name" autocomplete="off"></td>
                     </tr>
                     <tr>
                         <td>Name</td>
@@ -72,7 +76,7 @@
                         <td colspan="2"><button type="submit" id="addbtn">Add video</button></td>
                     </tr>
                 </table>
-			<!--</form>--></div>
+			<!-- </form> --></div>
 		</div>
 	</div>
 	<footer>
